// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AgentHierarchyNode /> > matches the manager card variant with space and resource chips 1`] = `
<DocumentFragment>
  <div
    class="relative w-[240px] rounded-lg border bg-surface px-3 py-3 shadow-card transition-all border-cyan-500/30"
    style="border-top-color: rgb(6, 182, 212); border-top-width: 3px;"
  >
    <div
      class="react-flow__handle react-flow__handle-top nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface target connectable connectablestart connectableend connectionindicator"
      data-handlepos="top"
      data-id="1-null-null-target"
    />
    <div
      class="flex items-start gap-3"
    >
      <span
        class="flex h-8 w-8 shrink-0 items-center justify-center rounded-md border border-line bg-canvas text-text-primary"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="15"
          viewBox="0 0 16 16"
          width="15"
        >
          <polygon
            fill="none"
            points="8,1.5 14.5,8 8,14.5 1.5,8"
            stroke="currentColor"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex min-w-0 items-center gap-2"
        >
          <span
            class="truncate text-sm font-medium text-text-primary"
          >
            Lead Manager
          </span>
          <span
            class="relative flex h-3 w-3 shrink-0 items-center justify-center"
          >
            <span
              class="relative inline-flex h-2.5 w-2.5 rounded-full bg-emerald-400 animate-pulse"
            />
          </span>
        </div>
        <div
          class="mt-1 flex flex-wrap items-center gap-2"
        >
          <span
            class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-semibold uppercase tracking-wider bg-cyan-500/15 text-cyan-300"
          >
            MANAGER
          </span>
        </div>
        <div
          class="mt-1.5 flex items-center gap-1.5 text-[11px] text-text-secondary"
        >
          <span
            class="truncate"
          >
            Marketing Space
          </span>
          <span
            class="h-1.5 w-1.5 rounded-full"
            style="background-color: rgb(6, 182, 212);"
          />
        </div>
        <div
          class="mt-1.5 truncate text-[11px] text-text-muted"
        >
          HTTP / Webhook - gpt-4.1
        </div>
        <div
          class="mt-3 flex flex-wrap gap-1.5"
        >
          <button
            class="inline-flex items-center gap-1 rounded-sm border border-zinc-700 bg-zinc-800 px-1.5 py-0.5 text-[11px] text-zinc-300 transition-colors hover:border-zinc-600 hover:text-white"
            title="CRM App - Revenue"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-app-window"
              fill="none"
              height="11"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
              <path
                d="M10 4v4"
              />
              <path
                d="M2 8h20"
              />
              <path
                d="M6 4v4"
              />
            </svg>
            <span
              class="max-w-[110px] truncate"
            >
              CRM App
            </span>
          </button>
          <button
            class="inline-flex items-center gap-1 rounded-sm border border-zinc-700 bg-zinc-800 px-1.5 py-0.5 text-[11px] text-zinc-300 transition-colors hover:border-zinc-600 hover:text-white"
            title="Lead Enrichment - COMPLETED 2026-05-14T12:00:00.000Z"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-workflow"
              fill="none"
              height="11"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <path
                d="M7 11v4a2 2 0 0 0 2 2h4"
              />
              <rect
                height="8"
                rx="2"
                width="8"
                x="13"
                y="13"
              />
            </svg>
            <span
              class="max-w-[110px] truncate"
            >
              Lead Enrichment
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="react-flow__handle react-flow__handle-bottom nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface source connectable connectablestart connectableend connectionindicator"
      data-handlepos="bottom"
      data-id="1-null-null-source"
    />
  </div>
</DocumentFragment>
`;

exports[`<AgentHierarchyNode /> > matches the orchestrator card variant 1`] = `
<DocumentFragment>
  <div
    class="relative w-[240px] rounded-lg border bg-surface px-3 py-3 shadow-card transition-all border-violet-500/30"
    style="border-top-color: rgb(139, 92, 246); border-top-width: 3px; box-shadow: 0 0 14px rgba(139,92,246,0.22);"
  >
    <div
      class="react-flow__handle react-flow__handle-top nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface target connectable connectablestart connectableend connectionindicator"
      data-handlepos="top"
      data-id="1-null-null-target"
    />
    <div
      class="flex items-start gap-3"
    >
      <span
        class="flex h-8 w-8 shrink-0 items-center justify-center rounded-md border border-line bg-canvas text-text-primary shadow-[0_0_10px_rgba(139,92,246,0.18)]"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="15"
          viewBox="0 0 16 16"
          width="15"
        >
          <polygon
            fill="none"
            points="8,1 14,4.5 14,11.5 8,15 2,11.5 2,4.5"
            stroke="currentColor"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </span>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex min-w-0 items-center gap-2"
        >
          <span
            class="truncate text-sm font-medium text-text-primary"
          >
            Workspace Planner
          </span>
          <span
            class="relative flex h-3 w-3 shrink-0 items-center justify-center"
          >
            <span
              class="relative inline-flex h-2.5 w-2.5 rounded-full bg-emerald-400 animate-pulse"
            />
          </span>
        </div>
        <div
          class="mt-1 flex flex-wrap items-center gap-2"
        >
          <span
            class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-semibold uppercase tracking-wider bg-violet-500/15 text-violet-300"
          >
            ORCHESTRATOR
          </span>
        </div>
        <div
          class="mt-1.5 truncate text-[11px] text-text-muted"
        >
          HTTP / Webhook - gpt-4.1
        </div>
      </div>
    </div>
    <div
      class="react-flow__handle react-flow__handle-bottom nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface source connectable connectablestart connectableend connectionindicator"
      data-handlepos="bottom"
      data-id="1-null-null-source"
    />
  </div>
</DocumentFragment>
`;

exports[`<AgentHierarchyNode /> > matches the unconnected worker card variant 1`] = `
<DocumentFragment>
  <div
    class="relative w-[240px] rounded-lg border bg-surface px-3 py-3 shadow-card transition-all border-blue-400/25 opacity-60"
    style="border-top-color: rgb(96, 165, 250); border-top-width: 2px;"
  >
    <div
      class="react-flow__handle react-flow__handle-top nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface target connectable connectablestart connectableend connectionindicator"
      data-handlepos="top"
      data-id="1-null-null-target"
    />
    <div
      class="flex items-start gap-3"
    >
      <span
        class="flex h-8 w-8 shrink-0 items-center justify-center rounded-md border border-line bg-canvas text-text-primary"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="15"
          viewBox="0 0 16 16"
          width="15"
        >
          <rect
            fill="none"
            height="10"
            rx="2"
            stroke="currentColor"
            stroke-width="1.5"
            width="10"
            x="3"
            y="3"
          />
        </svg>
      </span>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="flex min-w-0 items-center gap-2"
        >
          <span
            class="truncate text-sm font-medium text-text-primary"
          >
            Research Worker
          </span>
          <span
            class="relative flex h-3 w-3 shrink-0 items-center justify-center"
          >
            <span
              class="relative inline-flex h-2.5 w-2.5 rounded-full bg-emerald-400 animate-pulse"
            />
          </span>
        </div>
        <div
          class="mt-1 flex flex-wrap items-center gap-2"
        >
          <span
            class="inline-flex items-center rounded-full px-2 py-0.5 text-[10px] font-semibold uppercase tracking-wider bg-blue-400/15 text-blue-300"
          >
            WORKER
          </span>
        </div>
        <div
          class="mt-1.5 truncate text-[11px] text-text-muted"
        >
          HTTP / Webhook - gpt-4.1
        </div>
      </div>
    </div>
    <div
      class="react-flow__handle react-flow__handle-bottom nodrag nopan !h-2.5 !w-2.5 !border-line !bg-surface source connectable connectablestart connectableend connectionindicator"
      data-handlepos="bottom"
      data-id="1-null-null-source"
    />
  </div>
</DocumentFragment>
`;
